# mnemosyne-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  legacy-empty-chroma-reproduction.json  model-migration-crash-evidence.json  model-swap-evidence.json  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/.github/workflows/: ci.yml
docs/: embedding-model-migration.md  product-milestones.md
mnemosyne/: __init__.py  cli.py  config.py  ingest.py  models.py  providers.py  service.py  store.py  web.py
mnemosyne/static/: app.js  index.html  styles.css
tests/: legacy_empty_chroma_reproduction.py  model_swap_evidence.py  test_core.py  test_model_migration_crash.py
